--- a/전처리규칙.md
+++ b/전처리규칙.md
@@ -65,7 +65,7 @@
 
 ### 기타
 
-<span style='background-color: #fff5b1'>**제거 -> 발음전사 선택 -> 외국어/외래어 단일전사를 한글 읽기 수정**</span> 
+<span style='background-color: #fff5b1'>**제거 -> 발음전사 선택 -> 단일전사를 한글 읽기 수정**</span> 
 
 괄호내 기호, 의미 단어, 도량형 등은 따로 목록표를 작성해 둔다고 했음. 이를 찾아보기 위해 AI허브 전사규칙 사이트에 문의 중
 
