--- a/전처리규칙.md
+++ b/전처리규칙.md
@@ -57,7 +57,7 @@
 
 이중전사의 경우 <span style='background-color: #fff5b1'>**=> 발음전사 선택**</span>
 
-<span style='background-color: #fff5b1'> 단일 전사로만 되어있는 부분은 따로 잡아내서 발음전사로 표현을 해줘야 함. **=> 영문 필터링 후 수작업으로 수정 필요**</span>
+<span style='background-color: #fff5b1'> 단일 전사로만 되어있는 부분은 따로 잡아내서 발음전사로 표현을 해줘야 함. **=> 숫자, 영문 필터링 후 수작업으로 수정 필요**</span>
 
 
 <br/>
